se agregaron modelos tablas debiles con coreccion en ruta de carpetas para estilos

--- a/App/templates/App/backend.html
+++ b/App/templates/App/backend.html
@@ -1,4 +1,4 @@
-{% extends 'frontend.html' %}
+{% extends 'App/frontend.html' %}
 
 <!-- Title on the browser tab -->
 {% block title %} Backend {% endblock title %}
