--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -14,9 +14,9 @@
     <!-- Favicon -->
     <link href={% static "img/favicon.ico" %} rel="shortcut icon">
     <!-- Icon Tabs -->
-    <link href={% static "img/logo.ico" %} rel="shortcut icon">
+    <link href={% static "App/img/logo.ico" %} rel="shortcut icon">
     <!-- Static CSS -->
-    <link href={% static "css/style.css" %} rel="stylesheet">
+    <link href={% static "App/css/style.css" %} rel="stylesheet">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
         {% block content %} {% endblock content %}
 
         <!-- INCLUDE -->
-        {% include 'login.html' %}
+        {% include 'App/login.html' %}
 
     </div> <!-- End // Wrapper -->
 
