quitamos el head

--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -8,24 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Frontend {% endblock title %}</title>
     <!-- Bootstrap5 CSS -->
-<<<<<<< HEAD
     {% block link %}
     <!-- FontAwsome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- Favicon -->
     <link href={% static "App/img/favicon.ico" %} rel="shortcut icon">
-=======
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- FontAwsome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <!-- Favicon -->
-    <link href={% static "img/favicon.ico" %} rel="shortcut icon">
->>>>>>> b2582d48cd86ebf359d301421cbf65aa0336f794
     <!-- Icon Tabs -->
     <link href={% static "App/img/logo.ico" %} rel="shortcut icon">
     <!-- Static CSS -->
     <link href={% static "App/css/style.css" %} rel="stylesheet">
-<<<<<<< HEAD
     <!-- Extra -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css'>
     <!-- Unicons -->
@@ -38,7 +29,7 @@
       {% block nav %}
         {% if user.is_authenticated %}
         <ul class="menu">
-          <li class="logo"><a href="#">Graduate System</a></li>
+          <li class="logo"><a href="{% url 'pais_list' %}">Graduate System</a></li>
 
           <li class="item"><a href="#">
             <i class="fas fa-home"></i>&nbsp;&nbsp;Home</a></li>
@@ -96,67 +87,13 @@
     <!-- ======= Footer ======= -->
     
     {% block script %}
-=======
-</head>
-
-<body>
-    <div class="wrapper">
-        <!-- ======= header ======= -->
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-                <!-- Fontawsome + Title -->
-                <div class="col-sm">
-                    <a href="#" class="navbar-brand flex-grow-1" style="text-align: center; color: #fff; margin-left: 25px;">
-                        {% block navbar-content %}
-                        <i class="fas fa-biohazard"></i>&nbsp;&nbsp; Logo
-                        {% endblock navbar-content %}
-                    </a>
-                </div>
-
-                <!-- Button -->
-                <div class="col-sm">
-                    {% block nav-btn %}
-                        {% if user.is_authenticated %}
-                            <a href="{% url 'backend' %}" class="btn btn-outline-info btn-sm" id="btn-nav">Login</a>
-                        {% else %}
-                            <a class="btn btn-outline-info btn-sm" id="btn-nav" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
-                        {% endif %}
-                    {% endblock nav-btn %}
-                </div>
-            </nav>
-        </header>
-
-        <!-- ===== Block content (ROOT) ===== -->
-        {% block content %} {% endblock content %}
-
-        <!-- INCLUDE -->
-        {% include 'App/login.html' %}
-
-    </div> <!-- End // Wrapper -->
-
-    <!-- ======= Footer ======= -->
-    <footer class="bg-dark text-center text-lg-start" id="footer" style="color: #fff;">
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2021 Copyright:
-            <a class="text-light" href="#" style="text-decoration: none;">
-                <span {% block footer %} class="text-info" {% endblock footer %}>www.test.com</span>
-            </a>
-        </div>
-    </footer>
-
->>>>>>> b2582d48cd86ebf359d301421cbf65aa0336f794
     <!-- ======= JAVASCRIPT SECTION ======= -->
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<<<<<<< HEAD
     <!--Static JS -->
     <script  src={% static "App/js/script.js" %}></script>
     {% endblock script %}
-=======
-
->>>>>>> b2582d48cd86ebf359d301421cbf65aa0336f794
 </body>
 </html>
