--- a/App/templates/App/pais_edit.html
+++ b/App/templates/App/pais_edit.html
@@ -1,16 +1,9 @@
 {% extends 'App/pais_add.html' %}
 
 <!-- Title on tab -->
-{% block title %} Edit Product {% endblock title %}
+{% block title %} Edit Country {% endblock title %}
 
-<!-- Navbar contect -->
-{% block navbar-content %}
-<i class="text-warning fas fa-edit"></i>&nbsp;&nbsp; {{product.product}}
-{% endblock navbar-content %}
-
-<!-- Card (color and title) -->
-{% block card-color %} border-dark bg-warning {% endblock card-color %}
-{% block card-title %} <strong> Registered at: </strong> <span> {{ product.created_at | date:'m/d/Y (H:i)' }} </span> {% endblock card-title %}
+{% block card-title %} <strong> Registered at: </strong> <span> {{ pais.created_at | date:'m/d/Y (H:i)' }} </span> {% endblock card-title %}
 
 <!-- Form Action -->
 {% block Action %} action="/pais_edit" {% endblock Action %}
@@ -20,7 +13,8 @@
 
 <!-- =========== All <inputs> =========== -->
 <!-- Block ID -->
-{% block Value-id %} 
+{% block Value-id %}
+
 <div class="input-group mb-3">
     <span class="side-label btn border-secondary bg-light"><i class="fas fa-key"></i></span>
     <input type="text" class="form-control" name="id" value="{{ pais.id }}" readonly>
