--- a/App/static/App/css/style.css
+++ b/App/static/App/css/style.css
@@ -16,10 +16,16 @@
     background: #0b2239;
     padding: 0 15px;
   }
+  a#a{
+    color: white;
+    text-decoration: none;
+  } 
+
   a {
     color: white;
     text-decoration: none;
   }
+  
   .menu,
   .submenu {
     list-style-type: none;
@@ -257,11 +263,16 @@
 /* Home */
 .home {
   position: relative;
-  height: 100vh;
+  height: 92vh;
   width: 100%;
   background-image: url("bg.jpg");
   background-size: cover;
   background-position: center;
+  bottom: 12px;
+}
+.carousel-inner img{
+  width: 100%;
+  height: 200px;
 }
 .home::before {
   content: "";
