--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -10,13 +10,20 @@
     <!-- Bootstrap5 CSS -->
     {% block link %}
     <!-- FontAwsome -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    
     <!-- Favicon -->
     <link href={% static "App/img/favicon.ico" %} rel="shortcut icon">
     <!-- Icon Tabs -->
     <link href={% static "App/img/logo.ico" %} rel="shortcut icon">
     <!-- Static CSS -->
     <link href={% static "App/css/style.css" %} rel="stylesheet">
+  
     <!-- Extra -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css'>
     <!-- Unicons -->
@@ -32,17 +39,17 @@
           <li class="logo"><a href="{% url 'pais_list' %}">Graduate System</a></li>
 
           <li class="item"><a href="#">
-            <i class="fas fa-home"></i>&nbsp;&nbsp;Home</a></li>
+            <i id="a" class="fas fa-home"></i>&nbsp;&nbsp;Home</a></li>
           <li class="item">
             <a href="#">
             <i class="fas fa-user-friends"></i>&nbsp;&nbsp;Graduates</a>
           </li>
           <li class="item">
             <a href="#">
-            <i class="fas fa-user-friends"></i>&nbsp;&nbsp;Graduates</a>
+            <i id="a" class="fas fa-user-friends"></i>&nbsp;&nbsp;Graduates</a>
           </li>
           <li class="item has-submenu">
-            <a tabindex="0">Services</a>
+            <a id="a" tabindex="0">Services</a>
             <ul class="submenu">
               <li class="subitem"><a href="{% url 'backend' %}">Design</a></li>
               <li class="subitem"><a href="#">Development</a></li>
@@ -51,7 +58,7 @@
             </ul>
           </li>
           <li class="item has-submenu">
-            <a tabindex="0">Plans</a>
+            <a id="a" tabindex="0">Plans</a>
             <ul class="submenu">
               <li class="subitem"><a href="#">Freelancer</a></li>
               <li class="subitem"><a href="#">Startup</a></li>
