--- a/App/templates/App/frontend.html
+++ b/App/templates/App/frontend.html
@@ -1,9 +1,29 @@
 {% extends 'App/base.html' %}
-
+{% load static %}
 <!-- Page content -->
 {% block content %}
-<h1 class="container text-info" 
-style="width: 80%; position: absolute; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%); text-align: center;">FRONTEND</h1>
+<script> 
+    window.initializeCarousel=()=>{
+      $("#carouselExampleSlidesOnly").carousel({interval:500});
+    }
+  </script>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="{% static 'App/img/k1.jpg' %}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'App/img/k2.jpg' %}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'App/img/k1.jpg' %}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+        <img src="{% static 'App/img/k2.jpg' %}" class="d-block w-100" alt="...">
+      </div>
+  </div>
+</div>
+
 
 <!-- Messages from backend -->
 
