--- a/App/static/App/css/style.css
+++ b/App/static/App/css/style.css
@@ -11,6 +11,7 @@
   body {
     font-family: sans-serif;
     font-size: 16px;
+    height: 100vh;
   }
   nav {
     background: #0b2239;
@@ -262,13 +263,14 @@
 
 /* Home */
 .home {
-  position: relative;
-  height: 92vh;
+  position: absolute;
+  height: 92.9vh;
   width: 100%;
   background-image: url("bg.jpg");
   background-size: cover;
   background-position: center;
-  bottom: 12px;
+  bottom: 0px;
+
 }
 .carousel-inner img{
   width: 100%;
@@ -290,6 +292,52 @@
   pointer-events: auto;
 }
 /* From */
+/*Carosuel*/
+#carouselExampleCaptions{
+  bottom: 16px;
+  position: relative;
+}
+.carousel-inner .carousel-caption{
+  padding-bottom: 170px;
+}
+.carousel-inner .carousel-caption h1{
+  font-size: 52px;
+}
+
+.carousel-inner .carousel-caption .button{
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  border: 2px solid #3489bd;
+  text-decoration: none;
+  background-color: #3489bd;
+  color: #fff;
+}
+
+/* animated css */
+.animate__animated.animate__zoomIn{
+  --animate-delay: 1.7s;
+  --animate-duration: 1.2s
+}
+.animate__animated.animate__bounce{
+  --animate-delay: 1s;
+  --animate-duration: 1.5s
+}
+
+.animate__animated.animate__fadeInDown{
+  --animate-delay: 1s;
+  --animate-duration: 1.5s
+}
+
+.animate__animated.animate__fadeInRight
+{
+  --animate-delay: 1s;
+  --animate-duration: 1.5s
+}
 .form_container {
   position: fixed;
   max-width: 320px;
