--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -23,14 +23,15 @@
     <link href={% static "App/img/logo.ico" %} rel="shortcut icon">
     <!-- Static CSS -->
     <link href={% static "App/css/style.css" %} rel="stylesheet">
-<<<<<<< HEAD
-  
-=======
->>>>>>> 5d99fd1cfa0bb12dfeb40b01acad7fe718e49c94
     <!-- Extra -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css'>
     <!-- Unicons -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+    <!-- animate css link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <!-- google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     {% endblock link %}
 </head>
 
@@ -104,6 +105,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!--Static JS -->
     <script  src={% static "App/js/script.js" %}></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
     {% endblock script %}
 </body>
 </html>
