--- a/App/templates/App/frontend.html
+++ b/App/templates/App/frontend.html
@@ -2,33 +2,39 @@
 {% load static %}
 <!-- Page content -->
 {% block content %}
-<<<<<<< HEAD
-<script> 
-    window.initializeCarousel=()=>{
-      $("#carouselExampleSlidesOnly").carousel({interval:500});
-    }
-  </script>
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  
+  <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="unbosque1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="unbosque2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="unbosque3"></button>
+  </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="{% static 'App/img/k1.jpg' %}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'App/img/k2.jpg' %}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'App/img/k1.jpg' %}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-        <img src="{% static 'App/img/k2.jpg' %}" class="d-block w-100" alt="...">
+      {% for object in carousel%}
+      <div class="carousel-item {% if forloop.counter0 == 0 %}active{% endif %}">
+          <img src="{{object.image.url}}" style="height:92.9vh;" class="testi-overly d-block w-100" alt="Unbosque">
+          <div class="carousel-caption d-none d-md-block">
+              <h1 class="animate__animated
+              {% if forloop.counter0 == 0 %}
+              animate__fadeInDown
+              {% endif %}
+              {% if forloop.revcounter == 1 %}
+              animate__bounce
+              {% endif %}
+              {% if forloop.revcounter == 2 %}
+              animate__fadeInRight
+              {% endif %}">{{object.title}}</h1>
+              <h3 class="animate__animated animate__zoomIn">{{object.sub_title}}</h3>
+              <a href="{{object.link}}" class="button animate__animated animate__zoomIn mt-3 py-3 px-5 btn font-weight-bold">{{object.action_name}}</a>
+          </div>
       </div>
+      {% endfor %}
   </div>
 </div>
 
-=======
-<h1 class="container text-info" 
-style="width: 80%; position: absolute; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%); text-align: center;">FRONTEND</h1>
->>>>>>> 5d99fd1cfa0bb12dfeb40b01acad7fe718e49c94
 
 <!-- Messages from backend -->
 
