--- a/App/static/App/css/style.css
+++ b/App/static/App/css/style.css
@@ -467,12 +467,22 @@
 # TABLE
 -----------------------------------*/
 
-
+select{
+    height: 50px;
+    width: 100%;
+    outline: none;
+    font-size: 1rem;
+    color: #707070;
+    margin-top: 8px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 0 15px;
+}
 .table-container{
 display: flex;
 justify-content: center;
-margin:20vh auto;
-width: 80%;
+margin:9vh auto;
+width: 90%;
 background-color: #fff;
 border-radius: 10px;
 padding: 5px;
@@ -633,14 +643,9 @@ background-color: #0080ff;
 
 .container {
   position: relative;
-  top: 10%;
-  bottom: -70px; 
-  left: 10%;
-  margin-right: -50%; 
-  transform: translate(-50%, -50%); 
   text-align: center;
   max-width: 700px;
-  width: 80%; 
+  width: 90%; 
   background: #fff;
   padding: 25px;
   border-radius: 8px;
