--- a/App/templates/App/backend.html
+++ b/App/templates/App/backend.html
@@ -8,5 +8,23 @@
 
 <!-- Page content -->
 {% block content %}
-<h1 class="container text-danger" style="width: 80%; position: absolute; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%); text-align: center;">BACKEND</h1>
+<section class="page-section cta">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">
+                <h1 class="h1">Nuestra promesa para ti...
+                  <span>&#160;</span>
+                </h1>
+              </span>
+            </h2>
+            <br> 
+            <p class="mb-0"><br> Ya que te encuentras interesado en nuestros servicios, es primordial decirte que no te equivocaste, nuestra principal misión es crear un producto de la mayor calidad con gran empeño y actitud. </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock content %}
