--- a/App/templates/App/ciudad_list.html
+++ b/App/templates/App/ciudad_list.html
@@ -5,8 +5,10 @@
 
 {% block content %}
 
-<div class="table-container">
-
+<div class="table-container-view">
+    <div class="post">   
+        <h1><a >Ciudad</a></h1>
+    </div>
     <table>
         <thead>
             <tr>
