--- a/App/templates/App/empresa_add.html
+++ b/App/templates/App/empresa_add.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="table-container">
     
-    <section class="container" style="margin-top: 10%;">
+    <section id="container">
         <header>{% block card-title %}Company Registration Form {% endblock card-title %}</header>
         <form {% block Action %} action="/empresa_add" {% endblock Action %} method="POST" enctype="multipart/form-data" autocomplete="off" class="form">
         {% csrf_token %}
