--- a/App/templates/App/facultad_add.html
+++ b/App/templates/App/facultad_add.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="table-container">
     
-    <section class="container" style="margin-top: 25%">
+    <section id="container" >
         <header>{% block card-title %}School Registration Form {% endblock card-title %}</header>
         <form {% block Action %} action="/facultad_add" {% endblock Action %} method="POST" enctype="multipart/form-data" autocomplete="off" class="form">
         {% csrf_token %}
