--- a/App/templates/App/frontend.html
+++ b/App/templates/App/frontend.html
@@ -28,7 +28,7 @@
               animate__fadeInRight
               {% endif %}">{{object.title}}</h1>
               <h3 class="animate__animated animate__zoomIn">{{object.sub_title}}</h3>
-              <a href="{{object.link}}" class="button animate__animated animate__zoomIn mt-3 py-3 px-5 btn font-weight-bold">{{object.action_name}}</a>
+              <a href="{{object.link}}" class="button animate__animated animate__zoomIn mt-3 py-3 px-5 btn font-weight-bold" style="cursor: pointer;">{{object.action_name}}</a>
           </div>
       </div>
       {% endfor %}
