--- a/App/templates/App/pais_add.html
+++ b/App/templates/App/pais_add.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="table-container">
     
-    <section class="container">
+    <section id="container">
         <header>{% block card-title %}Country Registration Form {% endblock card-title %}</header>
         <form {% block Action %} action="/pais_add" {% endblock Action %} method="POST" enctype="multipart/form-data" autocomplete="off" class="form">
         {% csrf_token %}
