--- a/App/templates/App/ciudad_view.html
+++ b/App/templates/App/ciudad_view.html
@@ -16,7 +16,7 @@
 {% block Value-id %}
 
 <div class="input-group mb-3">
-    <span class="side-label btn border-secondary bg-light"><i class="fas fa-key"></i></span>
+    <span class="side-label btn"><i class="fas fa-key"></i></span>
     <input type="text" class="form-control" name="id" value="{{ ciudad.id }}" readonly>
 </div>
 {% endblock Value-id %}
