--- a/App/templates/App/pais_add.html
+++ b/App/templates/App/pais_add.html
@@ -20,9 +20,7 @@
         </div>
         <br>
         <button type="submit" >{% block Btn-action %}&nbsp;&nbsp; Add Country {% endblock Btn-action %}</button>
-        <button type="text" style="background-color: #0b2239;" ><a style="background-color: #0b2239;" href="{% url 'pais_list' %}">Cancel</a></button>
-        
-        
+        <a style="background-color: #0b2239;" href="{% url 'pais_list' %}">Cancel</a>
         </form>
     </section>
     
