--- a/App/static/App/css/style.css
+++ b/App/static/App/css/style.css
@@ -31,11 +31,16 @@ a {
   text-decoration: none;
 }
 
-.menu,
-.submenu {
+.menu {
   z-index: 9999999999;
   list-style-type: none;
   cursor: pointer;
+}
+.submenu{
+  z-index: 9999999999;
+  list-style-type: none;
+  cursor: pointer;
+  width: 100%;
 }
 
 .logo {
@@ -933,8 +938,8 @@ th {
   background: rgb(130, 106, 251);
 }
 
-.form a {
-  height: 55px;
+.form #back {
+  height: 35px;
   width: 100%;
   color: #fff;
   font-size: 1rem;
@@ -943,7 +948,22 @@ th {
   border: none;
   cursor: pointer;
   transition: all 0.2s ease;
-  background: rgb(130, 106, 251);
+  background-color: #0b2239;
+   display: flex;
+  justify-content: center;
+}
+#back-a {
+  height: 40px;
+  width: 100%;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 14px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  background-color: #0b2239;
+  display: block;
 }
 
 .form button:hover {
