--- a/App/templates/App/institucion_list.html
+++ b/App/templates/App/institucion_list.html
@@ -6,7 +6,9 @@
 {% block content %}
 
 <div class="table-container-view">
-
+    <div class="post">   
+        <h1><a >Institution</a></h1>
+    </div>
     <table>
         <thead>
             <tr>
