--- a/App/templates/App/pregrado_add.html
+++ b/App/templates/App/pregrado_add.html
@@ -33,7 +33,9 @@
         
         <br>
         <button type="submit" >{% block Btn-action %}&nbsp;&nbsp; Add Undergraduate {% endblock Btn-action %}</button>
-        <button type="text" style="background-color: #0b2239;" ><a style="background-color: #0b2239;" href="{% url 'pregrado_list' %}">Cancel</a></button>
+        <div id="back" > 
+            <a id="back-a" style="background-color: #0b2239;" href="{% url 'pregrado_list' %}">Cancel</a>
+        </div>
         
         
         </form>
