--- a/App/templates/App/ciudad_list.html
+++ b/App/templates/App/ciudad_list.html
@@ -7,7 +7,7 @@
 
 <div class="table-container-view">
     <div class="post">   
-        <h1><a >Ciudad</a></h1>
+        <h1><a >City</a></h1>
     </div>
     <table>
         <thead>
