--- a/App/templates/App/empresa_add.html
+++ b/App/templates/App/empresa_add.html
@@ -28,7 +28,10 @@
         </div>
         <br>
         <button type="submit" >{% block Btn-action %}&nbsp;&nbsp; Add Company {% endblock Btn-action %}</button>
-        <a style="background-color: #0b2239;" href="{% url 'empresa_list' %}">Cancel</a>
+        <div id="back" > 
+            <a id="back-a" style="background-color: #0b2239;" href="{% url 'empresa_list' %}">Cancel</a>
+        </div>
+       
         
         
         </form>
