--- a/App/templates/App/institucion_add.html
+++ b/App/templates/App/institucion_add.html
@@ -20,7 +20,10 @@
         </div>
         <br>
         <button type="submit" >{% block Btn-action %}&nbsp;&nbsp; Add Academy {% endblock Btn-action %}</button>
-        <a style="background-color: #0b2239;" href="{% url 'pais_list' %}">Cancel</a>
+        <div id="back" > 
+            <a id="back-a" style="background-color: #0b2239;" href="{% url 'pais_list' %}">Cancel</a>
+        </div>
+       
         
         
         </form>
